@@ -1,9 +1,19 @@
+2008-11-14  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* generic/tk.h:        The tip 125 implementation permits the
+	* generic/tkFrame.c:   wm manage command to manage any widget but
+	* macosx/tkMacOSXWm.c: only those with Frame instance data should
+	* unix/tkUnixWm.c:     be permitted. We now check for the suitability
+	* win/tkWinWm.c:       and raise an error for non-frame widgets.
+	* test/wm.test:        Updated the tests and documentation.
+	* doc/wm.n:            See also [Bug 2239034]
+
 2008-11-12  Joe English  <jenglish@users.sourceforge.net>
 
 	* generic/ttk/ttkWidget.c: Reworked widget construction
 	and destruction sequence; fixes [Bug 2207435] and several
 	other problems discovered during investigation of same.
-	* generic/ttk/ttkButton.c(CheckbuttonInitialize): 
+	* generic/ttk/ttkButton.c(CheckbuttonInitialize):
 	Account for initializeProc being called earlier in the
 	construction sequence now.
 	* tests/ttk/ttk.test: Updated test suite.
@@ -19,7 +29,7 @@
 
 2008-11-11  Joe English  <jenglish@users.sourceforge.net>
 
-	* generic/ttk/ttkWidget.c(BeginDrawing): Don't crash when 
+	* generic/ttk/ttkWidget.c(BeginDrawing): Don't crash when
 	application uses nondefault visual [Bug 2264732].
 
 2008-11-11  Jan Nijtmans  <nijtmans@users.sf.net>
